# circuitpython_network_tests

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.rst  README.rst.license  pyproject.toml  requirements-mcu.txt
code/: code.py  helpers.py  network_test_case.py
code/tests/: test_mqtt_connect.py  test_ntp.py  test_request_get.py  test_request_http_get.py  test_request_https_get.py  test_ssl.py  test_tcp_server.py  test_udp_server.py
helpers/: tcp_server_helper.py  udp_server_helper.py
